# soh-file-server-tutorial-project

./: LICENSE  README.md  file-server-application.cabal
config/: models  routes
src/: Config.hs  Dispatch.hs  Foundation.hs  Main.hs  Model.hs
src/Handler/: Download.hs  Home.hs  Preview.hs
templates/: home.hamlet
