name:          file-server-application
version:       0.1
synopsis:      A simple web-based file server
author:        Michael Steele
maintainer:    mikesteele81@gmail.com
copyright:     2013 FP Complete
category:      Web
build-type:    Simple
cabal-version: >=1.14

executable file-processor
  default-language: Haskell2010
  main-is: Main.hs
  hs-source-dirs: src
  ghc-options:   -Wall -threaded -O2
  build-depends:
      base ==4.6.*
    , blaze-markup
    , bytestring
    , conduit
    , containers
    , data-default
    , hamlet
    , monad-logger
    , persistent
    , persistent-sqlite
    , resourcet
    , safe
    , shakespeare-css
    , stm
    , text
    , yesod
